<resources>
    <string name="app_name">KIS Čtečka</string>
    <string name="place_card">Place card</string>
    <string name="status_initializing">Initializing…</string>
    <string name="status_reader_init_done">Initialized</string>
    <string name="status_card_not_expected">Card not expected</string>
    <string name="status_card_reading_error">Card reading error</string>
    <string name="status_card_reading_success">Success</string>
    <string name="status_reading">Waiting for a card</string>
    <string name="status_idle">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_reader_name">%s</string>
    <string name="status_disconnected_no_address">Disconnected (unknown address)</string>
    <string name="button_settings">Settings</string>

    <string name="settings_title">Settings</string>
    <string name="settings_section_behavior">Behavior</string>
    <string name="settings_flash_on_read">Flash camera when a card is read</string>
    <string name="settings_flash_only_on_success">Flash only on success</string>
    <string name="settings_flash_intensity">Intensity of the flash</string>
    <string name="settings_flash_only_on_success_summary_on">The camera will flash only on a successful read</string>
    <string name="settings_flash_only_on_success_summary_off">The flashlight will flash every time when a card is read</string>
    <string name="settings_flash_duration">How long is the flash turned on</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_keep_screen_on_summary_off">System configuration will be used</string>
    <string name="settings_keep_screen_on_summary_on">Screen stays on until exit</string>
    <string name="status_disconnected_studklub_address">%s\n(%s)</string>
    <string name="studklub_address" translatable="false">wis.vut.cy/ctecka/%s</string>
    <string name="status_start_failure">Startup failed:\n%s</string>
    <string name="action_restart_service">Try again</string>
    <string name="status_retrying">Retrying…</string>
    <string name="settings_section_screen">Screen</string>
    <string name="settings_black_theme">Black theme</string>
    <string name="settings_black_theme_summary_off">Default colors will be used</string>
    <string name="settings_black_theme_summary_on">Black background will be used</string>
    <string name="settings_proximity_sensor">Turn screen off when covered</string>
    <string name="settings_proximity_sensor_summary_off">The screen will stay on when covered</string>
    <string name="settings_proximity_sensor_summary_on">The screen will turn off when covered</string>

    <string name="brief_version_information">Version %s\nUpdated: %s</string>
    <string name="nfc_unavailable_title">NFC is not available</string>
    <string name="nfc_unavailable_text">This application can be used only on devices supporting NFC communication.</string>
    <string name="error_icon_contentDescription">Error</string>
    <string name="settings_app_version">Version information</string>
    <string name="settings_section_info">Information</string>
    <string name="title_activity_version">Version information</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="version_prop_package_name">Package name:</string>
    <string name="version_prop_version_name">Version:</string>
    <string name="version_prop_version_code">Version code:</string>
    <string name="version_prop_first_install_date">Installation date:</string>
    <string name="version_prop_last_install_date">Last upgrade date:</string>
    <string name="about_authors_title">Authors</string>
    <string name="about_authors"><b>2023</b> Jiří Wolker &lt;kisctecka@jwo.cz, xwolke00@su.fit.vutbr.cz&gt;</string>
    <string name="about_license_title">License</string>
    <string name="about_license">MIT License\n
\n
Copyright (c) 2023 Jiří Wolker\n
\n
Permission is hereby granted, free of charge, to any person obtaining a copy\n
of this software and associated documentation files (the "Software"), to deal\n
in the Software without restriction, including without limitation the rights\n
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n
copies of the Software, and to permit persons to whom the Software is\n
furnished to do so, subject to the following conditions:\n
\n
The above copyright notice and this permission notice shall be included in all\n
copies or substantial portions of the Software.\n
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n
SOFTWARE.</string>
    <string name="about_3rd_party_title">Information about 3rd party software</string>
    <string name="about_3rd_party">This application contains 3rd-party software distributed under\n
    terms of the Apache 2.0 license:\n
    \n
      • Material Icons\n
    \n
      • Android NFC tag class fix (https://gitlab.com/-/snippets/2522880)\n
    \n
    Full Apache 2.0 license text: https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="version_button_github">GitHub</string>
    <string name="version_button_discord">Discord</string>
    <string name="settings_app_github">GitHub page of the application</string>
    <string name="settings_app_discord">Discord channel <i>#kis-ctecka</i></string>
</resources>
