<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".VersionActivity"
    tools:showIn="@layout/activity_version">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true"
            app:title="@string/title_activity_version" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/license_page_horizontal_margin"
            app:cardBackgroundColor="@color/su_blue"
            app:cardElevation="4dp">

            <include layout="@layout/version_card" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/version_github_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_button_github"
                app:icon="@drawable/round_language_24"
                app:iconSize="36dp"
                app:iconPadding="8dp"
                app:iconGravity="textTop"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

            <View
                android:layout_width="16dp"
                android:layout_height="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/version_discord_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_button_discord"
                app:icon="@drawable/round_chat_24"
                app:iconSize="36dp"
                app:iconPadding="8dp"
                app:iconGravity="textTop"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/license_page_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/about_authors_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/license_page_horizontal_margin"
            android:text="@string/about_authors" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/license_page_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/about_license_title" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/license_page_horizontal_margin"
                android:text="@string/about_license" />
        </HorizontalScrollView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/license_page_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/about_3rd_party_title" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/license_page_horizontal_margin"
                android:textIsSelectable="true"
                android:text="@string/about_3rd_party" />
        </HorizontalScrollView>

        <!-- Spacer to not scroll exactly to the bottom. -->
        <View
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </LinearLayout>
</ScrollView>
